<resources>
    <string name="app_name">ProyectoAADT2_jorgeRe</string>
    <string name="main_activity_title">Proyecto T2-A de Acceso a Datos</string>
    <string name="main_activity_subtitle">Aplicación para la consulta de información acerca de los terremotos que han ocurrido a lo largo de la historia.\n\nRealizado por Jorge Re - Jkutkut.</string>
    <string name="main_activity_button">Consultar datos</string>
    <string name="query_activity_title">Consulta datos:</string>
    <string name="btn_filter_query">Filtrar</string>
    <string name="btn_sort_query">Buscar</string>
    <string name="filter_dialog_title">Filtros:</string>
    <string name="filter_dialog_chk_magnitude">Magnitud:</string>
    <string name="magnitude">Magnitud</string>
    <string name="filter_dialog_default_magnitude">7</string>
    <string name="country">País</string>
    <string name="query_no_results">No se han encontrado resultados</string>
    <string name="error_empty_magnitude">Selecciona un valor para la magnitud</string>
    <string name="error_invalid_magnitude">La magnitud tiene que tener un valor entre 0 y 10.</string>
    <string name="magnitude_spinner_description">seleccionar la magnitud</string>
    <string name="country_spinner_description">Para seleccionar el país</string>
    <string name="magnitude_chk_description">Para la magnitud</string>
    <string name="logo_description">logo</string>
    <string name="fap_icon_description">Toggle between dark and light modes.</string>
</resources>