<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueryActivity"
    android:padding="@dimen/activity_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_activity_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/title" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/btn_filter_query"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnQuery"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:id="@+id/btnFilterQuery"
        android:layout_marginEnd="@dimen/normal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sort_query"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnFilterQuery"
        android:id="@+id/btnQuery" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/btnFilterQuery"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/rvQuery"/>

</androidx.constraintlayout.widget.ConstraintLayout>