<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/filter_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:text="@string/filter_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <CheckBox
        android:id="@+id/chkMagnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_dialog_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtvMagnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_text_size"
        android:text="@string/magnitude"
        app:layout_constraintTop_toTopOf="@id/chkMagnitude"
        app:layout_constraintStart_toEndOf="@id/chkMagnitude"
        app:layout_constraintBottom_toBottomOf="@id/chkMagnitude"/>

<!--TODO change font size with https://stackoverflow.com/questions/9476665/how-to-change-spinner-text-size-and-text-color-->
    <Spinner
        android:id="@+id/spnMagnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/magnitude_operators"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="@id/chkMagnitude"
        app:layout_constraintBottom_toBottomOf="@id/chkMagnitude"
        app:layout_constraintStart_toEndOf="@id/txtvMagnitude" />

    <EditText
        android:id="@+id/etxtMagnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/chkMagnitude"
        app:layout_constraintBottom_toBottomOf="@id/chkMagnitude"
        app:layout_constraintStart_toEndOf="@id/spnMagnitude"
        android:inputType="number|numberDecimal"
        android:text="@string/filter_dialog_default_magnitude"/>

    <CheckBox
        android:id="@+id/chkCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chkMagnitude"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_text_size"
        android:text="@string/country"
        app:layout_constraintTop_toTopOf="@id/chkCountry"
        app:layout_constraintStart_toEndOf="@id/chkCountry"
        app:layout_constraintBottom_toBottomOf="@id/chkCountry"/>

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toTopOf="@id/chkCountry"
        app:layout_constraintBottom_toBottomOf="@id/chkCountry"
        app:layout_constraintStart_toEndOf="@id/txtvCountry" />


</androidx.constraintlayout.widget.ConstraintLayout>